kompose-deploy/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-deploy-default: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: MONGODB_DATABASE
              value: watchlist
            - name: MONGODB_PASSWORD
              value: PASSWORD
            - name: MONGODB_USERNAME
              value: root
          image: bitnami/mongodb:latest
          name: mongodb
          resources: {}
      restartPolicy: Always
status: {}
