kompose-deploy/movies-loader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: movies-loader
  name: movies-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movies-loader
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-deploy-default: "true"
        io.kompose.service: movies-loader
    spec:
      containers:
        - env:
            - name: AWS_REGION
              value: us-east-2
            - name: SQS_URL
              value: https://sqs.us-east-2.amazonaws.com/796834059009/movies_to_parse_sandbox-test
          image: monarene/movie-loader:develop
          name: movies-loader
          resources: {}
      restartPolicy: Always
status: {}
