kompose-deploy/movies-marketplace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: movies-marketplace
  name: movies-marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movies-marketplace
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-deploy-default: "true"
        io.kompose.service: movies-marketplace
    spec:
      containers:
        - image: monarene/movies-marketplace:develop
          name: movies-marketplace
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
