kompose-deploy/movies-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: movies-store
  name: movies-store
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movies-store
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kompose-deploy-default: "true"
        io.kompose.service: movies-store
    spec:
      containers:
        - env:
            - name: mongodb://root:PASSWORD@mongodb/watchlist?retryWrites
              value: true&w=majority&poolSize=1
          image: monarene/movie-store:develop
          name: movies-store
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
